--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>kotlin-customer-api-aws-terraform</finalName>
 		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
 		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 		<plugins>
