--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,12 +1,4 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java CI with Maven
+name: Build and Push Image
 
 on:
   push:
@@ -29,3 +21,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Build & Push Image
+      run: |
+        docker login -u $DOCKER_USERNAME -p ${{ secrets.DOCKER_PASSWORD }}
+        docker image build -t $DOCKER_USERNAME/kotlin-customer-api-aws-terraform .
+        docker push $DOCKER_USERNAME/kotlin-customer-api-aws-terraform
