--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,9 +24,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - uses: actions/checkout@v3
-    - name: Build & Push Image
-      run: |
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker image build -t ${{ secrets.DOCKER_USERNAME }}/kotlin-customer-api-aws-terraform .
-        docker push ${{ secrets.DOCKER_USERNAME }}/kotlin-customer-api-aws-terraform
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Build & Push Image
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker image build -t ${{ secrets.DOCKER_USERNAME }}/kotlin-customer-api-aws-terraform .
+          docker push ${{ secrets.DOCKER_USERNAME }}/kotlin-customer-api-aws-terraform
