--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,16 @@ build/
 /mvnw.cmd
 /mvnw
 /.mvn/wrapper/maven-wrapper.properties
+
+# Local terraform directories
+.terraform/
+
+# State files
+*.tfstate
+.tfstate.
+
+# Crash log files
+*.log
+
+# Sensitive data
+*.tfvars
