--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -7,5 +7,11 @@ services:
       environment:
         TZ: "America/Sao_Paulo"
       ports:
-        - "8080:8080"
+        - "80:8080"
       restart: always
+      deploy:
+        resources:
+          limits:
+            memory: 700M
+          reservations:
+            memory: 700M
